fix: upload image swagger
